--- a/Informe Final/Capitulo1.tex
+++ b/Informe Final/Capitulo1.tex
@@ -5,7 +5,15 @@
 \paragraph\indent
 El presente documento corresponde al trabajo de graduación de la carrera de Ingeniería en Computación de la Facultad de Ciencias Exactas y Tecnología - Universidad Nacional de Tucumán, de los alumnos Nicolás Bachs y Loïk Choua.
 
+\paragraph\indent
 Esta documentación surgió a partir de sucesivas versiones del mismo que fueron revisadas por los usuarios finales del sistema, los tutores y jurados del proyecto.
+
+\paragraph\indent
+Zimmerman Muebles es una empresa dedicada a la fabricación y comercialización de muebles y artículos de decoración. En los últimos años la empresa ha automatizado algunas cuestiones administrativas de forma heterogénea y aislada. Sin embargo, la automatización de los procesos de presupuestación, venta, producción, entrega de productos, como la previsión de un proyecto integral que contemple todas las áreas concentrando la información e una única fuente de datos no han sido realizados. 
+Con esa inquietud la gerencia de Zimmerman Muebles contactó a uno de los integrantes del grupo de este trabajo de graduación consultando sobre el desarrollo de un sistema que contemple y resuelva todas las necesidades existentes.
+
+\paragraph\indent
+El desarrollo de este sistema fue utilizado como caso práctico para la resolución de trabajos prácticos de las asignaturas Ingeniería de Software I y Laboratorio de Bases de Datos por los integrantes de estre grupo.
 
 \section{Objetivos}
 \subsection{Generales}
@@ -13,10 +21,13 @@ Esta documentación surgió a partir de sucesivas versiones del mismo que fueron
 Con respecto al trabajo de graduación, el objetivo principal es desarrollar el sistema de gestión para una mueblería, poniendo en práctica todos los conocimientos y habilidades adquiridas durante el transcurso de la carrera.
 
 \subsection{Específicos}
+\paragraph\indent
+Desarrollar un sistema (mediante el uso de tecnologias web) para una mueblería, con el fin de optimizar el proceso de manejo de stock, presupuestos, ventas y entrega de productos, y que cumpla con las siguientes características:
 \begin{itemize}
-	\item Desarrollar el sistema de manera tal que, para los empleados actuales de la mueblería, sea intuitivo, fácil de utilizar y se pueda implementar rápidamente.
-	\item Desarrollar un sistema que cumpla con los requisitos de software ANSI/IEEE 830 que son descriptos posteriormente en este documento.
-	\item Desarrollar un sistema que permita automatizar los procesos de la mueblería.
-	\item Desarrollar un sistema que permita brindar información resumida y procesada acerca de las operaciones que se llevan a cabo en la mueblería.
-	\item Desarrollar un sistema que permita almacenar y procesar datos que contribuyan a la toma de decisiones en la mueblería.
+	\item permita automatizar los procesos del negocio,
+	\item sea intuitivo y fácil de utilizar para los empleados,
+	\item se pueda implementar rápidamente,
+	\item permita almacenar y procesar datos que contribuyan a la toma de decisiones,
+	\item sea capaz de brindar información resumida y procesada acerca de las operaciones que se llevan a cabo,
+	\item verifique los requisitos de software ANSI/IEEE 830 que se describen en este documento.
 \end{itemize}
