--- a/Informe Final/Capitulo8.tex
+++ b/Informe Final/Capitulo8.tex
@@ -5,25 +5,22 @@
 \section{Sobre el proyecto}
 
 En primera medida se desarrolló el proyecto cumpliendo con los objetivos propuestos
-inicialmente. Se pusieron en práctica conocimientos incorporados en la carrera Ingeniería en
-Computación, y sobre todo en la PPS. También se logró aprender y profundizar acerca de nuevas herramientas
-necesarias para el desarrollo del proyecto y para una mejor formación profesional.
+inicialmente. El sistema desarrollado cumple con los requisitos de software ANSI/IEEE 830. Se pusieron en práctica conocimientos incorporados en la carrera Ingeniería en Computación, y sobre todo en la PPS. También se logró aprender y profundizar acerca de nuevas herramientas necesarias para el desarrollo del proyecto y para una mejor formación profesional.
 
 \paragraph\indent
 El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y
 finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De
-esta manera se consiguieron optimizar los procesos que se llevan a cabo en la mueblería.
+esta manera se consiguieron optimizar los procesos que se llevan a cabo en la mueblería, de una manera intuitiva y fácil de utilizar para los empleados.
 
 \paragraph\indent
 El sistema permite generar y actualizar la lista de precios de forma automática, reduciendo
 los tiempos que tomaba generarlas y distribuirlas en todas las sucursales de la mueblería. Además
 otorga la posibilidad de conocer en tiempo real la disponibilidad de los productos en las distintas
-sucursales de la empresa.
+sucursales de la empresa. Brindando además información resumida y procesada de las operaciones que se llevan a cabo en la mueblería.
 
 \paragraph\indent
 Al usar tecnologías web, se consiguió que el sistema pueda ser ejecutado mediante cualquier
-navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y
-MacOS.
+navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y MacOS.
 
 \paragraph\indent
 La implementación del sistema permitirá llevar a cabo un estudio estadístico, mejorando
@@ -45,6 +42,15 @@ Por otro lado, otro reto que se presentó fue el despliegue del sistema utilizan
 
 \paragraph\indent
 Por último el uso de lenguajes de programación modernos, sin conocimientos previos, obligó a realizar una capacitación en ellos.
+
+% Objetivos:
+% Desarrollar un sistema (mediante el uso de tecnologias web) para una mueblería, con el fin de optimizar el proceso de manejo de stock, presupuestos,  ventas y entrega de productos, y que cumpla con las siguientes características:
+%   \item permita automatizar los procesos del negocio, SI
+%	\item sea intuitivo y fácil de utilizar para los empleados, SI
+%	\item se pueda implementar rápidamente, 
+%	\item permita almacenar y procesar datos que contribuyan a la toma de decisiones, SI
+%	\item sea capaz de brindar información resumida y procesada acerca de las operaciones que se llevan a cabo, SI
+%	\item verifique los requisitos de software ANSI/IEEE 830 que se describen en este documento.
 
 \section{Personales}
 
