--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex
@@ -36,7 +36,7 @@
     \caseUseRow{}
     \newAlternative{A3: El producto, tela y lustre indicado ya se encuentra en el presupuesto.}{3} %Flujo alternativo A3.
     \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos lineas idénticas al presupuesto.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos líneas idénticas al presupuesto.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
