--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/modificarLineaRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/modificarLineaRemito.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion modificar una línea de remito.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: desea modificar una línea deremito.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasRemito (Listar lineas de remito).} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasRemito (Listar líneas de remito).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
