--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex
@@ -29,7 +29,7 @@
     \caseUseRow{}
     \newAlternative{A2: El producto, tela y lustre indicado ya se encuentra en la venta.}{5} %Flujo alternativo A2.
     \caseUseRow{La secuencia A2 comienza luego del punto 5 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos lineas idénticas a la venta.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos líneas idénticas a la venta.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
