--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor modificar una linea de venta existente.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere modificar una linea de venta.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasVenta (Listar lineas de venta)} %Precondiciones
+	\caseUseRow{Haber ejecutado con éxito el \CUlistarLineasVenta (Listar líneas de venta)} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Si el producto, tela y lustre seleccionado no pertenece a ningún producto final existente se ejecuta el CU25 (Crear producto final) con el producto, tela y lustre seleccionados.} %Postcondiciones
