--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex
@@ -30,4 +30,9 @@
 
 %DIAGRAMA DE ACTIVIDAD
 %\lineabreak[0]
-\activityDiagram{\caseUseShortName}{Diagrama de actividad - \caseUseName}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramasActividad/DiagramaDeActividad/buscarAvanzadoOrdenesProduccion}
+    \caption{CU92 - Buscar avanzado órdenes de producción}
+\label{fig:buscarAvanzadoOrdenesProduccion}
+\end{figure}
