--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex
@@ -6,7 +6,7 @@
 \renewcommand{\caseUseName}{\CUlistarTareasLineaOrdenProduccion - Listar tareas de líneas de orden de producción } %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a los fabricantes de ZMGestion listar las tareas de una línea de orden de producción existente.} %Resumen
-\renewcommand{\caseUsePeople}{Fabricantes: quiere listar las lineas de orden de producción.} %Actor: Meta
+\renewcommand{\caseUsePeople}{Fabricantes: quiere listar las líneas de orden de producción.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el \CUlistarLineasOrdenProduccion\ (Listar líneas de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
