--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/descancelarRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/descancelarRemito.tex
@@ -22,10 +22,10 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede descancelar dicho remito.}
     \caseUseRow{El escenario vuelve al punto 1.}
     \caseUseRow{}
-    \newAlternative{A2: El remito no posee lineas de remito.}{1}
-    %Debido a que puede ocurrir que las lineas de venta (que representaban una linea de remito)
+    \newAlternative{A2: El remito no posee líneas de remito.}{1}
+    %Debido a que puede ocurrir que las líneas de venta (que representaban una linea de remito)
     %que tenian el idRemito que fue cancelado puede ser reemplazado por otro remito nuevo
-    %y quedar sin lineas de remito el remito cancelado.
+    %y quedar sin líneas de remito el remito cancelado.
     \caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que el remito se encuentra vacío.}
     \caseUseRow{El escenario vuelve al punto 1.}
