--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -177,7 +177,7 @@
 			\itemCaseUse{crearOrdenProduccion}{Crear orden de producción}
 			\itemCaseUse{buscarAvanzadoOrdenesProduccion}{Buscar avanzado órdenes de producción}
 			\itemCaseUse{modificarOrdenProduccion}{Modificar orden de producción}
-			\itemCaseUse{listarLineasOrdenProduccion}{Listar lineas de orden de producción}
+			\itemCaseUse{listarLineasOrdenProduccion}{Listar líneas de orden de producción}
 			\itemCaseUse{borrarOrdenProduccion}{Borrar orden de producción}
 			\itemCaseUse{cancelarOrdenProduccion}{Cancelar orden de producción}
 			\itemCaseUse{listarTareasLineaOrdenProduccion}{Listar tareas de línea de orden de producción}
@@ -466,7 +466,7 @@
 
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=\textwidth,height=0.4\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaEntregas}
+		\includegraphics[width=\textwidth,height=0.5\textheight,keepaspectratio]{DiagramaClases/Vistas/vistaEntregas}
 		\caption{Diagrama de clases - Vista entregas}
 	\label{fig:Diagrama de clases - Vista entregas}
 	\end{figure}
@@ -540,8 +540,8 @@
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{DiagramasEstado/DiagramaDeEstado/lineasProducto}
-		\caption{Diagrama de transición de estados - Lineas de producto}
-		\label{fig:Diagrama de transición de estados - Lineas de producto}
+		\caption{Diagrama de transición de estados - Líneas de producto}
+		\label{fig:Diagrama de transición de estados - Líneas de producto}
 	\end{figure}
 	\begin{figure}[H]
 		\centering
