--- a/Informe Final/Capitulos/Capitulo4/cap4sec3.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec3.tex
@@ -150,7 +150,7 @@
                 \item Crear orden de producción
                 \item Buscar avanzado órdenes de producción
                 \item Modificar orden de producción
-                \item Listar lineas de orden de producción
+                \item Listar líneas de orden de producción
                 \item Borrar orden de producción
                 \item Cancelar orden de producción
                 \item Listar observaciones de línea de orden de producción
@@ -273,7 +273,7 @@
             \item Gestión órdenes de producción
             \begin{itemize}
                 \item Buscar avanzado órdenes de producción
-                \item Listar lineas de orden de producción
+                \item Listar líneas de orden de producción
                 \item Listar observaciones de línea de orden de producción
                 \item Listar tareas de línea de orden de producción
             \end{itemize}
