--- a/Informe Final/Capitulos/Capitulo6/cap6sec4.tex
+++ b/Informe Final/Capitulos/Capitulo6/cap6sec4.tex
@@ -19,7 +19,7 @@
 			\item \textbf{Postman:} Postman nace como una herramienta que principalmente nos permite crear peticiones sobre APIs de una forma muy sencilla y poder, de esta manera, probar las APIs. Todo basado en una extensión de Google Chrome. El usuario de Postman puede ser un desarrollador que esté comprobando el funcionamiento de una API para desarrollar sobre ella o un operador el cual esté realizando tareas de monitoreo sobre un API.
 			
 			\item  \textbf{Compute Engine:} Es el IaaS (Infraestructura como servicio) de la plataforma de Google Cloud (GCP), en este servicio se pueden crear máquinas virtuales (instancias) de recursos personalizados (CPU, RAM, disco), su costo se factura por minuto de cada recurso. Se lo escogió por ser una tecnología de gran uso en la actualidad, además tener experiencia utilizando esta herramienta nos permite insertarnos de mejor manera en el mundo laboral.
-			\item \textbf{Firebase Hosting:} es un servicio de hosting de contenido web con nivel de producción orientado a desarrolladores. Con un solo comando, puedes implementar aplicaciones web y entregar contenido dinámico y estático en una CDN (red de distribución de contenidos) global rápidamente. También se puede sincronizar Firebase Hosting con Cloud Functions o Cloud Run para compilar y alojar microservicios en Firebase.
+			\item \textbf{Firebase Hosting:} es un servicio de hosting de contenido web con nivel de producción orientado a desarrolladores. Con un solo comando, se pueden implementar aplicaciones web y entregar contenido dinámico y estático en una CDN (red de distribución de contenidos) global rápidamente. También se puede sincronizar Firebase Hosting con Cloud Functions o Cloud Run para compilar y alojar microservicios en Firebase.
 		
 		\end{itemize}
 
