--- a/Informe Final/Documentacion.tex
+++ b/Informe Final/Documentacion.tex
@@ -122,6 +122,15 @@ unicode	]{hyperref}
 
 \begin{titlepage}
 	\centering
+	\begin{figure}[H]
+		\begin{minipage}[b]{0.4\textwidth}
+			\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{Extras/logoUNT}
+		\end{minipage}
+		\hfill
+		\begin{minipage}[b]{0.4\textwidth}
+			\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{Extras/logoFACET}
+		\end{minipage}
+	\end{figure}
 	{\scshape universidad nacional de tucumán - facultad de ciencias exactas y tecnología\par}
 	{\scshape departamento de electricidad, electrónica y computación\par}
 	{\scshape\Large ingeniería en computación\par}
@@ -131,7 +140,7 @@ unicode	]{hyperref}
 	{\LARGE\mdseries Trabajo de Graduación\par}
 	\vspace{0.5cm}
 	{\scshape\huge Sistema de Gestión de mueblería\par}
-	{\scshape revisión 3\par}
+	{\scshape revisión 4\par}
 	\vfill
 	{\mdseries autores\par}
 	\par\noindent\rule{0.9\textwidth}{0.2pt}
