--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/borrarEmpleado.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/borrarEmpleado.tex
@@ -33,7 +33,7 @@
     \alternativeRow{ZMGestion muestra un mensaje de error informando que el usuario no se puede borrar.}
     \caseUseRow{El escenario vuelve al punto 1.}
 
-    \newAlternative{A4: El usuario indicado tiene lineas de órdenes de producción asociadas.}{1} %Flujo alternativo A4.
+    \newAlternative{A4: El usuario indicado tiene líneas de órdenes de producción asociadas.}{1} %Flujo alternativo A4.
 	\caseUseRow{La secuencia A4 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error informando que el usuario no se puede borrar.}
     \caseUseRow{El escenario vuelve al punto 1.}
