--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/cancelarOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/cancelarOrdenProduccion.tex
@@ -30,4 +30,9 @@
 
 %DIAGRAMA DE ACTIVIDAD
 %\lineabreak[0]
-\activityDiagram{\caseUseShortName}{Diagrama de actividad - \caseUseName}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramasActividad/DiagramaDeActividad/cancelarOrdenProduccion}
+    \caption{CU94 - Cancelar orden de producción}
+\label{fig:cancelarOrdenProduccion}
+\end{figure}
