--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex
@@ -21,7 +21,7 @@
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: No se agregó ninguna linea de orden de producción.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos lineas idénticas a la orden de producción.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se pueden agregar dos líneas idénticas a la orden de producción.}
     \caseUseRow{El escenario vuelve al punto 3.}
     \caseUseRow{}
 }
