--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex
@@ -29,4 +29,9 @@
 
 %DIAGRAMA DE ACTIVIDAD
 %\lineabreak[0]
-\activityDiagram{\caseUseShortName}{Diagrama de actividad - \caseUseName}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramasActividad/DiagramaDeActividad/listarLineasOrdenProduccion}
+    \caption{CU94 - Listar líneas de orden de producción}
+\label{fig:listarLineasOrdenProduccion}
+\end{figure}
