--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/modificarPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/modificarPresupuesto.tex
@@ -17,7 +17,7 @@
     \addCaseUseStep{El vendedor indica el presupuesto que desea modificar.}
     \addCaseUseStep{ZMGestion muestra un formulario autocompletado para que el usuario modifique el cliente, observaciones el periodo de validez. Si el vendedor cuenta con los permisos necesarios podrá modificar el periodo de validez.}
     \addCaseUseStep{El vendedor modifica el cliente, observaciones y periodo de validez.}
-    \addCaseUseStep{Se ejecuta el CU71 (Listar lineas de presupuesto) para el presupuesto seleccionado.}
+    \addCaseUseStep{Se ejecuta el CU71 (Listar líneas de presupuesto) para el presupuesto seleccionado.}
     \addCaseUseStep{Si el vendedor desea modificar una linea, ejecuta el CU73 (Modificar linea de presupuesto), si desea borrar una linea ejecuta el CU74 (Borrar linea de presupuesto) y si desea agregar una nueva linea ejecuta el CU72 (Crear linea de presupuesto).}
     \addCaseUseStep{ZMGestion modifica el presupuesto seleccionado y muestra un mensaje indicando el éxito de la operación.}
 }
