--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/listarLineasRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/listarLineasRemito.tex
@@ -3,10 +3,10 @@
 
 \renewcommand{\caseUseCreated}{11/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{11/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUlistarLineasRemito - Listar lineas de remito} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{\CUlistarLineasRemito - Listar líneas de remito} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion listar las lineas de remito de un remito determinado.} %Resumen
-\renewcommand{\caseUsePeople}{Vendedores: quiere listar las lineas de remito de un remito existente.} %Actor: Meta
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion listar las líneas de remito de un remito determinado.} %Resumen
+\renewcommand{\caseUsePeople}{Vendedores: quiere listar las líneas de remito de un remito existente.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoRemitos\ (Buscar avanzado remitos).} %Precondiciones
 }
@@ -14,11 +14,11 @@
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El vendedor indica el remito del cual desea listar sus lineas de remito.}
-    \addCaseUseStep{ZMGestion lista las lineas de remito existentes del remito seleccionado.}
+    \addCaseUseStep{El vendedor indica el remito del cual desea listar sus líneas de remito.}
+    \addCaseUseStep{ZMGestion lista las líneas de remito existentes del remito seleccionado.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El remito no posee lineas de remito.}{1} %Flujo alternativo A1.
+	\newAlternative{A1: El remito no posee líneas de remito.}{1} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que el remito seleccionado no posee ninguna linea de remito.}
     \caseUseRow{El escenario vuelve al punto 1.}
