--- a/Informe Final/comandos.tex
+++ b/Informe Final/comandos.tex
@@ -2,7 +2,7 @@
 \newcommand{\activityDiagram}[2]{
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramasActividad/DiagramaDeActividad/#1}
+		\includegraphics[angle=90,width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramasActividad/DiagramaDeActividad/#1}
 		\caption{#2}
 	\label{fig:#1}
 	\end{figure}
